--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,16 +1,13 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom" class="no-select">
-    <ion-tab-button tab="speak">
-      <ion-icon name="mic"></ion-icon>
-    </ion-tab-button>
-    <ion-tab-button tab="listen" *ngIf="isListener">
-      <ion-icon name="ear"></ion-icon>
+    <ion-tab-button tab="transcribe">
+      <ion-icon name="create"></ion-icon>
     </ion-tab-button>
     <ion-tab-button tab="manage" *ngIf="isPublisher">
       <ion-icon name="cloud-upload"></ion-icon>
     </ion-tab-button>
-    <ion-tab-button tab="settings">
-      <ion-icon name="settings"></ion-icon>
+    <ion-tab-button (click)="showLogoutConfirm()">
+      <ion-icon name="log-out"></ion-icon>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
