--- a/src/app/transcribe/transcribe.page.html
+++ b/src/app/transcribe/transcribe.page.html
@@ -1,6 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-progress-bar *ngIf="isLoading" type="indeterminate"></ion-progress-bar>
+    <ion-img src="../../assets/img/logo.png"></ion-img>
   </ion-toolbar>
 </ion-header>
 
