--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,114 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+
+/* fix input validation hints not visible on ios */
+ion-item.ion-invalid.ion-touched, ion-item.ion-invalid.item-has-focus {
+    --border-color: var(--ion-color-danger);
+}
+
+ion-item.ion-valid.item-has-focus {
+    --border-color: var(--ion-color-success);
+}
+/* end fix */
+
+* {
+    -webkit-user-select: text;
+    -moz-user-select: text;
+    -ms-user-select: text;
+    user-select: text;
+}
+
+.not-selectable {
+    -webkit-user-select: none; /* Safari */        
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
+}
+
+ion-button {
+    height: 40px;
+}
+
+ion-item {
+    --padding-top: 6px;
+    --inner-padding-bottom: 6px;
+    --padding-start: 0;
+    --inner-padding-start: 20px;
+}
+
+ion-content h1 {
+    font-size: 1.5em;
+    font-weight: bold;
+    margin: 20px 20px 10px;
+}
+
+ion-header ion-img {
+    width: 60px;
+    position: absolute;
+    margin: auto;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+}
+
+ion-icon {
+    min-width: 1em;
+}
+
+ion-toolbar {
+    ion-buttons, ion-button  {
+        transition: .3s ease opacity;
+    }
+}
+
+.fadeInWhenLoaded {
+    opacity: 0!important;
+    transition: .3s ease opacity;
+}
+
+.fadeInWhenLoaded.loaded {
+    opacity: 1!important;
+}
+
+/* hotfix for https://github.com/ionic-team/ionic-framework/issues/17397  */
+.alert-checkbox-group::-webkit-scrollbar {
+    width: 1em;
+    display: block !important;
+}
+
+.alert-checkbox-group::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+.alert-checkbox-group::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    outline: 1px solid slategrey;
+}
+/* hotfix end */
+
+
+.no-select, .no-select * {
+    user-select: none;
+}
+
+.no-select input {
+    user-select: auto!important;
+}
+
+.disabled {
+    &, * {
+        pointer-events: none;
+    }
+    opacity: 0.5;
+}
+
+// note: does not work on ion-img because of shadow-root
+.no-drag, .no-drag * {
+    -webkit-user-drag: none;
+    -khtml-user-drag: none;
+    -moz-user-drag: none;
+    -o-user-drag: none;
+}
