--- a/src/app/edit/edit.page.html
+++ b/src/app/edit/edit.page.html
@@ -8,5 +8,10 @@
 </ion-header>
 
 <ion-content>
-
+  <div id="media-player">
+    <app-player></app-player>
+  </div>
+  <div id="editor">
+    <app-editor></app-editor>
+  </div>
 </ion-content>
