--- a/src/app/edit/edit.page.scss
+++ b/src/app/edit/edit.page.scss
@@ -11,12 +11,12 @@
       }
 
     ion-label {
-        flex: 0 0 80px;
+        flex: 0 0 140px;
     }
 
-    .link-btn {
-        ion-icon {
-        }
+    .link-btn, #merge-placeholder {
+      width: 30px;
+      margin-right: 5px;
     }
 }
 
