--- a/src/app/edit/edit.page.html
+++ b/src/app/edit/edit.page.html
@@ -3,7 +3,10 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="tabs/transcribe"></ion-back-button>
     </ion-buttons>
-    <ion-title>edit</ion-title>
+    <ion-title>{{title}}</ion-title>
+    <ion-buttons slot="end">
+      <ion-button id="save-btn" (click)="saveTranscript()" fill="solid" color="success" size="large">Save</ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
@@ -15,7 +18,7 @@
     <ion-list #paragraphsList id="paragraphs" spellcheck="false">
       <ion-item *ngFor="let paragraph of paragraphs; index as i">
         <ion-label>{{paragraph[0].start}} - {{paragraph[paragraph.length-1].end}}</ion-label>
-        <ion-button shape="round" (click)="setAudioTime(paragraph[0].start)" id="play-paragraph-btn"><ion-icon name="play" id="play-paragraph-icon"></ion-icon></ion-button>
+        <ion-button [disabled]="!isLoaded" shape="round" (click)="setAudioTimeByParagraphIndex(i)" id="play-paragraph-btn"><ion-icon name="play" id="play-paragraph-icon"></ion-icon></ion-button>
         <div class="paragraph-wrapper" contenteditable (focusout)="updateTimestamps($event, i)" (keydown)="splitParagraphIfEnter($event, i)">
           <ng-container *ngFor="let word of paragraph; index as j">
             <span class="word">{{word.word}}</span>
@@ -34,9 +37,9 @@
 <ion-footer>
   <div id="audio-ctrl">
     <ion-item>
-      <ion-range id="audio-progress" min="-200" max="200" color="secondary">
-        <ion-label slot="start">-200</ion-label>
-        <ion-label slot="end">200</ion-label>
+      <ion-range id="audio-progress" min="0" max="{{audioDuration*100}}" color="secondary" value="{{(currentAudioTime - audioStartTime)*100}}">
+        <ion-label slot="start">{{audioStartTime}}</ion-label>
+        <ion-label slot="end">{{audioEndTime}}</ion-label>
       </ion-range>
     </ion-item>
     <ion-buttons class="ion-justify-content-center">
