feat: make merge buttons look awesome
Co-authored-by: YAWNICK <YAWNICK@users.noreply.github.com>

--- a/src/app/edit/edit.page.html
+++ b/src/app/edit/edit.page.html
@@ -26,7 +26,7 @@
           </ng-container>
         </div>
         <div *ngIf="i == 0" slot="start" id="merge-placeholder"></div>
-        <ion-button *ngIf="i > 0" (click)="mergeParagraphUp(i)" slot="start" size="small" class="link-btn">
+        <ion-button color="secondary" *ngIf="i > 0" (click)="mergeParagraphUp(i)" slot="start" size="small" class="link-btn">
           <ion-icon name="arrow-up"></ion-icon>
         </ion-button>
       </ion-item>
