fix compilation errors

--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -33,11 +33,11 @@
         <ion-icon slot="start" name="help-circle-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-buttons slot="end" class="tooltip">
+    <!-- <ion-buttons slot="end" class="tooltip">
       <span class="tooltiptext tooltip-left">Change Language</span>
       <ion-button (click)="presentMenuLanguages($event)">
         <ion-icon slot="start" name="globe"></ion-icon>
       </ion-button>
-    </ion-buttons>
+    </ion-buttons> -->
   </ion-toolbar>
 </ion-footer>
