--- a/src/app/manage/create-transcription/create-transcription.page.html
+++ b/src/app/manage/create-transcription/create-transcription.page.html
@@ -31,12 +31,12 @@
       </ion-item>
       <ion-item #selectFileWrapper [ngClass]="srcFileSelected ? 'ion-valid' : 'ion-invalid'">
         <ion-label position="stacked">Transcription Audio Source</ion-label>
-        <ion-input (change)="setSrcFile($event.target.files.item(0))" ng-required="required" type="file" accept=".mp3,.mp4,.wav">
+        <ion-input (change)="setSrcFile($event.target)" ng-required="required" type="file" accept=".mp3,.mp4,.wav">
         </ion-input>
       </ion-item>
       <ion-item #selectFileWrapper [ngClass]="trFileSelected ? 'ion-valid' : 'ion-invalid'">
         <ion-label position="stacked">Transcription Text File</ion-label>
-        <ion-input (change)="setTrFile($event.target.files.item(0))" ng-required="required" type="file" accept=".json, .vtt">
+        <ion-input (change)="setTrFile($event.target)" ng-required="required" type="file" accept=".json, .vtt">
         </ion-input>
       </ion-item>
       <ion-item>
@@ -58,7 +58,7 @@
     <ion-list lines="full" class="ion-no-margin ion-no-padding">
       <ion-item #selectFileWrapper [ngClass]="zipFileSelected ? 'ion-valid' : 'ion-invalid'">
         <ion-label position="stacked">Zip File</ion-label>
-        <ion-input (change)="setZipFile($event.target.files.item(0))" ng-required="required" type="file" accept=".zip">
+        <ion-input (change)="setZipFile($event.target)" ng-required="required" type="file" accept=".zip">
         </ion-input>
       </ion-item>
       <ion-item>
