Feat: change icon color when editing is finished

--- a/src/app/transcribe/folder-list/text-list/text-list.page.html
+++ b/src/app/transcribe/folder-list/text-list/text-list.page.html
@@ -11,7 +11,7 @@
   <h1>Texts in {{folderName}}</h1>
   <ion-list #textList class="fadeInWhenLoaded">
     <ion-item button *ngFor="let text of texts" routerLink="/transcribe/{{publisherId}}/{{folderId}}/{{text.id}}" [state]="{correctionId: text.correction}">
-      <ion-icon name="reader" [color]="(text.words_finished/text.words_total) === 1 ? 'success' : 'dark'" class="textIcon"></ion-icon> 
+      <ion-icon name="reader" [color]="(text.finished) ? 'success' : 'dark'" class="textIcon"></ion-icon> 
       <ion-label>{{ text.title }}</ion-label>
     </ion-item>
   </ion-list>
