feat: add essential folder-stats code

--- a/src/app/manage/manage.page.html
+++ b/src/app/manage/manage.page.html
@@ -8,6 +8,9 @@
       <ion-button color="primary" (click)="openShareFolderModal()">
         <ion-icon name="cloudy"></ion-icon>
       </ion-button>
+      <ion-button color="primary" (click)="openFolderStatsModal()">
+        <ion-icon name="stats-chart"></ion-icon>
+      </ion-button>
       <ion-button color="primary" (click)="downloadFolder()">
         <ion-icon name="download"></ion-icon>
       </ion-button>
