--- a/src/app/manage/folder-stats/editor-list/editor-list.page.html
+++ b/src/app/manage/folder-stats/editor-list/editor-list.page.html
@@ -12,28 +12,28 @@
 <ion-content class="no-select">
   <div #content class="fadeInWhenLoaded">
     <div *ngIf="folderStats">
-      <!-- <ion-list>
-        <ion-item button *ngFor="let editor of folderStats.editors">
+      <ion-list>
+        <ion-item *ngFor="let editor of folderStats.userstats">
           <ion-label>
             <h2>{{editor.name}}</h2>
           </ion-label>
           <span class="progress-text ion-float-right">
-            {{speaker.finished}} / {{folderStats.numOfTexts}} transcripts
+            {{editor.finished}} / {{folderStats.numOfTexts}} transcripts
           </span>
           <ion-icon [ngClass]="{'hidden' : !(speaker.finished === folderStats.numOfTexts)}"
             class="ion-float-right" color="success" name="checkmark-circle"></ion-icon>
         </ion-item>
-      </ion-list> -->
+      </ion-list>
       <!-- Message shown, when folder has not been shared -->
-      <!-- <div *ngIf="folderStats.editors.length === 0" class="vertical-center-container">
+      <div *ngIf="folderStats.userstats.length === 0" class="vertical-center-container">
         <ion-text class="vertical-center-content" color="medium">
-          <span>No statistics to display. Please share the folder to a speaker."</span>
+          <span>No statistics to display. Please share the folder to a editor."</span>
         </ion-text>
-      </div> -->
+      </div>
     </div>
   </div>
   <!-- Skeleton Text displayed during Loading -->
-  <!-- <div *ngIf="!folderStats">
+  <div *ngIf="!folderStats">
     <ion-list *ngFor="let i of [1, 2]">
       <ion-item *ngFor="let i of [1, 2, 3]">
         <ion-label>
@@ -42,5 +42,5 @@
         <ion-skeleton-text class="ion-float-right" animated style="width: 30%"></ion-skeleton-text>
       </ion-item>
     </ion-list>
-  </div> -->
+  </div>
 </ion-content>
